tests/samples/negative/functions/variadic_not_last.ax
module variadic_not_last;

extern c {
    @name("bad")
    fn bad(..., value: i32) -> i32;
}

fn main() -> i32 {
    return 0;
}
